TestSuite/errors/err0098.pas
var i : integer;

begin
for i := 1 to 10 do
 Inc(i);
end.